--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -13,10 +13,10 @@
             </a>
             <div class="navLinks">
                 <a href="{{ url_for('questions') }}">
-                    <h2 class="navCurrent">Home</h2>
+                    <h2 class="nav">Home</h2>
                 </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="{{ url_for('reviews') }}">
-                    <h2 class="nav">Reviews</h2>
+                    <h2 class="navCurrent">Reviews</h2>
                 </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <a href="{{ url_for('profile') }}">
                     <h2 class="nav">My Account</h2>
@@ -70,3 +70,4 @@
         </div>
     </body>
 </html>
+
