Centered questions text

--- a/templates/questions.html
+++ b/templates/questions.html
@@ -38,9 +38,9 @@
             </form>
             <button class="searchButton">Search</button>
 
-            <div class="postedText">
+            <div class="leftText">
 <!-- We will need to add a conditional here to display "There are no posts" when empty. -->
-                <h3 class="postedText">Recently Posted:</h3>
+                <h3>Recently Posted:</h3>
                 <table class="centered">
                     {% for question in questions %}
                     <tr>
