--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,7 +100,7 @@ body {
 
 .searchText {
     position: relative;
-    margin-left: -24.5%;
+    margin-left: -21.5%;
     margin-right: auto;
     margin-bottom: 4px;
     font-family: fontLight;
@@ -248,20 +248,26 @@ body {
 }
 
 .topic {
-    position: relative;
+    position: fixed;
     font-family: fontLight;
     font-size: 20px;
-    left: -22%;
+    float: left;
+}
+
+.asked {
+    float: left;
+    position: fixed;
+    margin-top: -2%;
 }
 
 .title {
     position: relative;
-    text-align: left;
     font-family: fontBold;
     font-size: 25px;
     color: white;
     margin-bottom: -1.2%;
-    margin-left: -35%;
+    float: left;
+    top: -85px;
 }
 
 .edit {
@@ -269,10 +275,6 @@ body {
     font-size: 20px;
     color: white;
     text-decoration: none;
-}
-
-.centered tr {
-    margin-left: -30%;
 }
 
 .delete {
@@ -298,7 +300,7 @@ a {
     background-color: white;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 100%;
     height: 1px;
 }
 
@@ -307,13 +309,10 @@ p {
     text-align: left;
 }
 
-.asked {
-    margin-left: -40%;
-}
-
 p.body {
-    margin-left: -25%;
-    text-align: left;
+    position: fixed;
+    float: left;
+    margin-top: 5%;
 }
 
 table {
@@ -329,4 +328,11 @@ th, td {
     color: white;
     text-align: left;
     font-family: fontLight;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wrapper {
+    position: relative;
 }
