--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -35,12 +35,18 @@
             {% endif %}
                 <div class="newQuestionWrapper">
                     <label class="searchText">Title</label><br>
-                    <input class="search" type="text" name="header" value="{% if question %}{{question.header}} {% endif %}"/><br><br>
-                    <label class="searchText">Topics</label><br>
-                    <input class="search" type="text" name="topics" value="{% if question %}{{question.topic}} {% endif %}"/><br><br>
+                    <input class="search" type="text" name="header" title="Provide your question with a title" value="{% if question %}{{question.header}} {% endif %}"/><br><br>
+                    <label class="searchText">Topic</label><br>
+                    <select class="topics" type="text" name="topics" title="Which topic best fits your question?" value="{% if question %}{{question.topic}} {% endif %}"/>
+                        <option value="Computer Science">Computer Science</option>
+                        <option value="Math">Math</option>
+                        <option value="English">English</option>
+                        <option value="Life Advice">Life Advice</option>
+                        <option value="Please just help me!!!">Please just help me!!!</option>
+                    </select><br><br>
                     <label class="searchText">Question </label><br>
                     <!--When these lines were broken onto new lines it was taking those new lines as being a part of the textarea, so it has a bunch of blank space-->
-                    <textarea name="body" rows="10" cols="0" class="body">{% if question %}{{question.body}}{% else %}Add your question description here!!{% endif %}</textarea><br>
+                    <textarea name="body" rows="10" cols="0" class="body" title="Add your question description here!!">{% if question %}{{question.body}}{% endif %}</textarea><br>
                     {% if question %}
                         <input class=postButton type="submit" value="Update Question"/>
                     {% else %}
