Changed error for login from bullet point to paragraph

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -240,6 +240,10 @@ body {
     margin-top: 4%;
 }
 
+.loginPage p {
+    text-align: center;
+}
+
 .centered {
     position: relative;
     margin-left: auto;
