--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <div class="header">
+            <a href="index.html">
             <img src="../static/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
+            </a>
             <div class="welcomeHeader">
                 <h1>Welcome Back to Aardvark Answers</h1>
                 <h2 class="subTitle">Login</h2>
@@ -21,7 +23,7 @@
                     {% if form.email.errors %}
                     <ul class="errors">
                         {% for error in form.email.errors %}
-                        <li>{{ error }}</li>
+                        <p>{{ error }}</p>
                         {% endfor %}
                     </ul>
                     {% endif %}
