formatting and css
updated edit button for profile and starting to fix reviews.html format

--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -39,6 +39,7 @@
             <button class="searchButton">Search</button>
 
             <div class="postedText">
+	    <div class="leftText">
 <!-- We will need to add a conditional here to display "There are no posts" when empty. -->
                 <h3 class="postedText">Recently Posted:</h3>
                 <table class="centered">
