--- a/templates/register.html
+++ b/templates/register.html
@@ -5,25 +5,23 @@
         <meta name="Home" content="3155 Project">
 		<meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/forms.css') }}" />
     </head>
     <body>
         <div class="header">
             <img src="../static/Images/AardvarkLogo.png" alt="Aardvark Answers Logo" class="logo">
             <div class="welcomeHeader">
                 <h1>Welcome to Aardvark Answers</h1>
+                <h2 class="subTitle">Login</h2>
                 <!-- Once we get accounts functional we need to add a logout button -->
             </div>
         </div>
-
-        <div class="formwrapper">
-            <h2 class="title">Register</h2>
+        <div class="loginPage">
             <form method="POST" action="/register">
                 <div class="form-field">{{ form.name.label }} {{ form.name }}
                     {% if form.name.errors %}
                     <ul class="errors">
                         {% for error in form.name.errors %}
-                        <li>{{ error }}</li>
+                        <p class="error">{{ error }}</p>
                         {% endfor %}
                     </ul>
                     {% endif %}
@@ -32,7 +30,7 @@
                     {% if form.email.errors %}
                     <ul class="errors">
                         {% for error in form.email.errors %}
-                        <li>{{ error }}</li>
+                        <p class="error">{{ error }}</p>
                         {% endfor %}
                     </ul>
                     {% endif %}
@@ -41,7 +39,7 @@
                     {% if form.password.errors %}
                     <ul class="errors">
                         {% for error in form.password.errors %}
-                        <li>{{ error }}</li>
+                        <p class="error">{{ error }}</p>
                         {% endfor %}
                     </ul>
                     {% endif %}
@@ -50,7 +48,7 @@
                     {% if form.confirmPassword.errors %}
                     <ul class="errors">
                         {% for error in form.confirmPassword.errors %}
-                        <li>{{ error }}</li>
+                        <p class="error">{{ error }}</p>
                         {% endfor %}
                     </ul>
                     {% endif %}
