--- a/templates/register.html
+++ b/templates/register.html
@@ -55,6 +55,9 @@
                 </div>
                 {{ form.submit }}
             </form>
+            <form method="GET" action="/index">
+                <button class="button">Back</button>
+            </form>
         </div>
     </body>
 </html>
