--- a/templates/login.html
+++ b/templates/login.html
@@ -36,6 +36,9 @@
                 </div>
                 {{ form.submit }}
             </form>
+            <form method="GET" action="/index">
+                <button class="button">Back</button>
+            </form>
         </div>
     </body>
 </html>
