--- a/static/css/style.css
+++ b/static/css/style.css
@@ -416,6 +416,22 @@ th, td {
     font-size: 20px;
 }
 
+
+.reviewButton {
+    display: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    background: linear-gradient(to right, #00b7ff, #ffffc7);
+    border-radius: 40px;
+    color: #272638;
+    height: 50px;
+    width: 200px;
+    outline: white;
+    font-family: fontBold;
+    font-size: 20px;
+}
+
 .profileButton {
     background: linear-gradient(to right, #00b7ff, #ffffc7);
     margin-right: 2%;
@@ -428,7 +444,6 @@ th, td {
     font-family: fontBold;
     font-size: 20px;
 }
-
 
 .buttonDiv {
     margin-left: auto;
