--- a/templates/new_question.html
+++ b/templates/new_question.html
@@ -43,6 +43,23 @@
                         <option value="English">English</option>
                         <option value="Life Advice">Life Advice</option>
                         <option value="Please just help me!!!">Please just help me!!!</option>
+                        <option value="Pets">Pets</option>
+                        <option value="Holidays">Holidays</option>
+                        <option value="Food">Food</option>
+                        <option value="Covid">Covid</option>
+                        <option value="Random">Random</option>
+                        <option value="Hand Food Mouth Disease">Hand Foot Mouth Disease</option>
+                        <option value="Toes">Toes</option>
+                        <option value="Gaming">Gaming</option>
+                        <option value="Books">Books</option>
+                        <option value="UNCC">UNCC</option>
+                        <option value="Tech">Tech</option>
+                        <option value="Python">Python</option>
+                        <option value="Java">Java</option>
+                        <option value="Furniture">Furniture</option>
+                        <option value="Traveling">Traveling</option>
+                        <option value="Clock Repair">Clock Repair</option>
+                        <option value="Clothing">Clothing</option>
                     </select><br><br>
                     <label class="searchText">Question </label><br>
                     <!--When these lines were broken onto new lines it was taking those new lines as being a part of the textarea, so it has a bunch of blank space-->
