--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,20 +32,13 @@
         <div class="leftSide">
             <h1>Account Overview</h1>
             <img src="../static/Images/profilePic.jpg" class="profilePic" alt="Profile Picture">
-            <button class="uploadPic">Upload Photo</button>
-
-            {% for user in user_id %}
-            <h2>Email: {{ user.email }}</h2>
-            {% endfor %}
-            <input value="Enter your email" class="login">
-
-            <h2>Password:</h2>
-            <input value="Enter your current password" class="login">
+            <form>
+                <button class="uploadPic">Upload Photo</button>
+            </form>
+            <form action="{{ url_for('register', user_id=user.id) }}" method="GET">
+                <button class="profileButton">Change Password</button>
+            </form>
         </div>
-	 <div class="buttonDiv">
-              <div class="edit">
-      	           <form action="{{ url_for('register', user_id=user.id) }}" method="GET">
-             <button class="profileButton">Edit Profile</button>
       </form>
     </body>
 </html>
