--- a/templates/new_review.html
+++ b/templates/new_review.html
@@ -38,14 +38,8 @@
                     <!-- <p><input class="search" type="text" name="topics" value="{% if question %}{{question.topic}} {% endif %}"/></p> -->
                     <p><label class="searchText">Review</label></p>
                     <p>
-                        <textarea name="body" rows="10" cols="0" class="body">
-                            {% if review %}
-                                {{review.body}}
-                            {% else %}
-                                Type your review here
-                            {% endif %}
-
-                        </textarea>
+                        <!-- Keep this in one line, otherwise the new lines and spaces appear in the textarea. Ugly code makes pretty website-->
+                        <textarea name="body" rows="10" cols="0" class="body">{% if review %}{{review.body}}{% else %}Type your review here{% endif %}</textarea>
                     </p>
                     <p>
                         {% if review %}
