--- a/templates/profile.html
+++ b/templates/profile.html
@@ -45,7 +45,7 @@
                 {% for question in questions %}
                 <div class="questionSpacer">
                     <tr>
-                        <p class="title"><a href="{{ url_for('view_question', question_id=question.id) }}">{{ question.header }}></a></p>
+                        <p class="title2"><a href="{{ url_for('view_question', question_id=question.id) }}">{{ question.header }}></a></p>
                     </tr>
                     <div class="divider"></div>
                     <tr>
