--- a/templates/profile.html
+++ b/templates/profile.html
@@ -40,39 +40,25 @@
             </form>
         </div>
         <div class="rightSide">
-            <div class="tabs">
+                <div class="tabs">
                 <div class="tab">
                     <input type="radio" id="tab-1" name="tab-group-1" checked>
                     <label for="tab-1">Your Questions</label>
                     <div class="content">
-                        <table class="centered">
-                            {% for question in questions %}
-                            <div class="questionSpacer">
-                                <tr>
-                                    <p class="title"><a href="{{ url_for('view_question', question_id=question.id) }}">{{ question.header }}</a></p>
-                                </tr>
-                                <div class="divider"></div>
-                                <tr>
-                                    <p class="topic">Topic: {{ question.topics }}</p>
-                                </tr>
-                            </div>
-                            {% endfor %}
-                        </table>
+                        {% for question in questions %}
+                            <p><a href="{{ url_for('view_question', question_id=question.id) }}">{{ question.header }}</a></p>
+                        {% endfor %}
                     </div>
                 </div>
                 <div class="tab">
-                    <input type="radio" id="tab-2" name="tab-group-1" checked>
+                    <input type="radio" id="tab-2" name="tab-group-1">  
                     <label for="tab-2">Your Comments</label>
                     <div class="content">
-                        <table class="centered">
+                        <ul>
                             {% for comment in comments %}
-                            <div class="questionSpacer">
-                                <tr>
-                                    <p class="title"><a href="{{ url_for('view_question', question_id=comment.question_id) }}">{{ comment.content }}</a></p></p>
-                                </tr>
-                            </div>
+                                <li>{{ comment.content }}</li>
                             {% endfor %}
-                        </table>
+                        </ul>
                     </div>
                 </div>
             </div>
